--- a/projects/cli/package.json
+++ b/projects/cli/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "elm-land",
-  "version": "0.21.2",
+  "name": "@cekrem/elm-land",
+  "version": "0.21.5",
   "description": "Reliable web apps for everyone",
   "main": "index.js",
   "type": "module",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/elm-land/elm-land.git"
+    "url": "git+https://github.com/cekrem/elm-land.git"
   },
   "keywords": [
     "elm",
